--- a/ModelTool/Forms/MainForm.resx
+++ b/ModelTool/Forms/MainForm.resx
@@ -117,6 +117,33 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="TextBox_Generated.Text" xml:space="preserve">
+    <value>using System;
+
+namespace Model
+{
+    /// &lt;summary&gt;
+    /// 测试实体
+    /// &lt;/summary&gt;
+    public class TestEntity
+    {
+        /// &lt;summary&gt;
+        /// 测试主键
+        /// &lt;/summary&gt;
+        public int TestID { get; set; }
+
+        /// &lt;summary&gt;
+        /// 测试值
+        /// &lt;/summary&gt;
+        public double? TestNumber { get; set; }
+
+        /// &lt;summary&gt;
+        /// 测试字符串
+        /// &lt;/summary&gt;
+        public string TestString { get; set; }
+    }
+}</value>
+  </data>
   <metadata name="MenuStrip_Main.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
